@@ -60,6 +60,11 @@ Release date: TBA
 
   refs #2789
 
+* Add support for type parameter defaults added in Python 3.13.
+
+* Improve ``as_string()`` representation for ``TypeVar``, ``ParamSpec`` and ``TypeVarTuple`` nodes, as well as
+  type parameter in ``ClassDef``, ``FuncDef`` and ``TypeAlias`` nodes (PEP 695).
+
 
 What's New in astroid 3.3.11?
 =============================
